fix #15: adicionando a cardinalidade de endereço e corrigindo a tabela de dados em RNF001

--- a/requirements/functional/RF001.md
+++ b/requirements/functional/RF001.md
@@ -18,13 +18,16 @@ Nenhuma
 
 ## Cardinalidades
 
-Nenhuma
+[ USER ] ( 0..1 ) ------------ ( 1..1 ) [ ADDRESS ]
+
+Um usuário pode possuir somente um ou nenhum endereço. 
 
 ## Tabela de Dados
 
 | **Nome** | **Tipo** | **Valor Obrigatório** |**Propriedade** | 
 |----------|----------|-----------------------|---------------|
 | id | UUID | Sim | Gerado automaticamente; valor único |
+| address_id | UUID | Não | Chave estrangeira da tabela de endereço | 
 | name | VARCHAR(255) | Sim | - |
 | email | VARCHAR(255) | Sim | Valor único |
 | image | TEXT | Não | - |
