--- a/requirements/functional/RF001.md
+++ b/requirements/functional/RF001.md
@@ -18,16 +18,13 @@ Nenhuma
 
 ## Cardinalidades
 
-[ USER ] ( 0..1 ) ------------ ( 1..1 ) [ ADDRESS ]
-
-Um usuário pode possuir somente um ou nenhum endereço. 
+Nenhuma
 
 ## Tabela de Dados
 
 | **Nome** | **Tipo** | **Valor Obrigatório** |**Propriedade** | 
 |----------|----------|-----------------------|---------------|
 | id | UUID | Sim | Gerado automaticamente; valor único |
-| address_id | UUID | Não | Chave estrangeira da tabela de endereço | 
 | name | VARCHAR(255) | Sim | - |
 | email | VARCHAR(255) | Sim | Valor único |
 | image | TEXT | Não | - |
