fix #15: corrigindo a cardinalidade e a tabela de dados de RF003

--- a/requirements/functional/RF003.md
+++ b/requirements/functional/RF003.md
@@ -21,18 +21,27 @@ Clientes e Vendedores
 
 ## Cardinalidades
 
-Nenhum
+[ ADDRESS ] ( 0..1 ) ------------ ( 0..1 ) [ USER ]
+
+Um endereço não precisa conter um usuário para ser registrado, nem um usuário precisa depender de um endereço para existir. Contudo, se houver algum relacionamento entre os dois, deve ser no máximo uma e somente uma relação.
+
+[ ADDRESS ] ( 0..1 ) ------------ ( 0..1 ) [ STORE ]
+
+Um endereço não precisa conter uma loja para ser registrado, nem uma loja precisa depender de um endereço para existir. Contudo, se houver algum relacionamento entre os dois, deve ser no máximo uma e somente uma relação.
 
 ## Tabela de Dados
 
 | **Nome** | **Tipo** | **Valor Obrigatório** |**Propriedade** | 
 |----------|----------|-----------------------|---------------|
 | id | UUID | Sim | Gerado automaticamente; valor único |
-| state | TEXT | Sim | - |
-| city | TEXT | Sim | - |
-| district | TEXT | Não | - |
-| street | TEXT | Sim | - |
-| complement | TEXT | Sim | - |
+| user_id | UUID | Não | Chave estrangeira da tabela de usuário | 
+| store_id | UUID | Não | Chave estrangeira da tabela de loja | 
+| cep | VARCHAR(8) | Sim | Máximo de caracteres: 8; mínimo de carcacteres: 8 |
+| state | VARCHAR(255) | Sim | Máximo de caracteres: 255  |
+| city | VARCHAR(255) | Sim | Máximo de caracteres: 255 |
+| district | VARCHAR(255) | Sim | Máximo de caracteres: 255 |
+| street | VARCHAR(255) | Sim | Máximo de caracteres: 255 |
+| complement | TEXT | Não | - |
 | number | INTEGER | Sim | - |
 | latitude | TEXT | Não | - |
 | longitude | TEXT | Não | - |
