fix #15: corrigindo a tabela de dados de RF001 e RF002

--- a/requirements/functional/RF001.md
+++ b/requirements/functional/RF001.md
@@ -25,8 +25,8 @@ Nenhuma
 | **Nome** | **Tipo** | **Valor Obrigatório** |**Propriedade** | 
 |----------|----------|-----------------------|---------------|
 | id | UUID | Sim | Gerado automaticamente; valor único |
-| name | VARCHAR(255) | Sim | - |
-| email | VARCHAR(255) | Sim | Valor único |
+| name | VARCHAR(255) | Sim | Máximo de caracteres: 255 |
+| email | VARCHAR(255) | Sim | Máximo de caracteres: 255; Valor único |
 | image | TEXT | Não | - |
 | active | BOOL | Sim | Valor padrão: true |
 | created_at | TIMESTAMP | Sim | Valor padrão: horário atual; não será possível alterar  |
