fix #15: corrigindo todo o RF013

--- a/requirements/functional/RF013.md
+++ b/requirements/functional/RF013.md
@@ -1,15 +1,12 @@
-# RF012
+# RF013
 
 ## Caso de Uso
 
-Gerenciar Itens de Carrinho
+Calcular Frete
 
 ## Descrição
 
-O sistema deve permitir que os usuários gerenciem os itens de carrinho no carrinho de compras.
-Nesse caso, o gerenciar seria:
-- Editar;
-- Apagar.
+O sistema deve calcular o frete automaticamente de acordo com o endereço de entrega do usuário e com o endereço da loja.
 
 ## Atores
 
@@ -17,4 +14,6 @@ Clientes e Vendedores
  
 ## Dependências
 
-[RF011](/requirements/functional/RF011.md)
+[RF003](/requirements/functional/RF003.md)
+
+[RF012](/requirements/functional/RF012.md)
