fix #15: corrigindo os atores de RF001

--- a/requirements/functional/RF001.md
+++ b/requirements/functional/RF001.md
@@ -10,7 +10,7 @@ O sistema deve permitir que os usuários registrem uma conta.
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
 
 ## Tabela de Dados
 
