fix #15: corrigindo os atores de RF002

--- a/requirements/functional/RF002.md
+++ b/requirements/functional/RF002.md
@@ -10,7 +10,7 @@ O sistema deve permitir que os usuários cadastrados realizem autenticação.
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
