fix #15: corrigindo os atores de RF003

--- a/requirements/functional/RF003.md
+++ b/requirements/functional/RF003.md
@@ -13,7 +13,7 @@ O sistema deve permitir que usuários gerenciem seus endereços de entrega e os 
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
