fix #15: corrigindo os atores de RF004

--- a/requirements/functional/RF004.md
+++ b/requirements/functional/RF004.md
@@ -14,7 +14,7 @@ O sistema deve permitir que os usuários gerenciem suas lojas. Nesse caso, o ger
 
 ## Atores
 
-Vendedores
+Usuário
  
 ## Dependências
 
