fix #15: corrigindo os atores de RF006

--- a/requirements/functional/RF006.md
+++ b/requirements/functional/RF006.md
@@ -10,7 +10,7 @@ O sistema deve disponibilizar uma ação que permita ao usuário acessar um cana
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
