--- a/requirements/functional/RF009.md
+++ b/requirements/functional/RF009.md
@@ -13,7 +13,7 @@ O sistema deve permitir que os usuários compartilhem lojas fora do aplicativo. 
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
