fix #15: corrigindo os atores de RF011

--- a/requirements/functional/RF011.md
+++ b/requirements/functional/RF011.md
@@ -10,7 +10,7 @@ O sistema deve permitir que os usuários adicionem produtos no carrinho de compr
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
