fix #15: corrigindo os atores de RF012

--- a/requirements/functional/RF012.md
+++ b/requirements/functional/RF012.md
@@ -13,8 +13,8 @@ Nesse caso, o gerenciar seria:
 
 ## Atores
 
-Clientes e Vendedores
- 
+Usuário
+
 ## Dependências
 
 [RF011](/requirements/functional/RF011.md)
