fix #15: corrigindo os atores de RF013

--- a/requirements/functional/RF013.md
+++ b/requirements/functional/RF013.md
@@ -10,7 +10,7 @@ O sistema deve calcular o frete automaticamente de acordo com o endereço de ent
 
 ## Atores
 
-Clientes e Vendedores
+Usuário
  
 ## Dependências
 
