fix #15: corrigindo a descrição de RF014

--- a/requirements/functional/RF014.md
+++ b/requirements/functional/RF014.md
@@ -10,7 +10,9 @@ O sistema deve permitir que o usuário finalize o pedido a partir dos itens pres
 Durante o processo de finalização, o sistema deve automaticamente:
 - Gerar o QR Code para pagamento via Pix;
 - Gerar o código “copia e cola” do Pix;
-- Registrar o pedido no sistema.
+- Registrar o pedido no sistema;
+- Gerar um documento contendo as informações do pedido e armazená-lo em serviço externo;
+- Disponibilizar um link para compartilhamento do pedido.
 
 ## Atores
 
