fix #15: corrigindo a dependencia, incluindo a cardinalidade e tabela de dados de RF014

--- a/requirements/functional/RF014.md
+++ b/requirements/functional/RF014.md
@@ -20,6 +20,34 @@ Usuário
  
 ## Dependências
 
-[RF003](/requirements/functional/RF003.md)
-
 [RF012](/requirements/functional/RF012.md)
+
+[RF013](/requirements/functional/RF013.md)
+
+## Cardinalidades
+
+[ ORDER ] ( 1..1 ) ------------ ( 0..N ) [ STORE ]
+
+Um pedido deve pertecer no mínimo a uma loja e no máximo a uma loja. Contudo, não é necessário que um loja possua um pedido para existir. Entretanto, caso exista demanda, a loja poderá possuir muitos pedidos.
+
+[ ORDER ] ( 1..1 ) ------------ ( 0..N ) [ ADDRRESS ]
+
+Um pedido deve pertecer no mínimo a um endereço de entrega e no máximo a um endereço de entrega. Contudo, não é necessário que um endereço possua um pedido para existir. Entretanto, caso exista demanda, a endereço de entrega poderá possuir muitos pedidos.
+
+## Tabela de Dados
+
+| **Nome** | **Tipo** | **Valor Obrigatório** |**Propriedade** | 
+|----------|----------|-----------------------|---------------|
+| id | UUID | Sim | Gerado automaticamente; valor único |
+| code | VARCHAR(4) | Sim | - |
+| store_id | UUID | Sim | Chave estrangeira da tabela de loja |
+| user_address_id | UUID | Sim | Chave estrangeira da tabela de endereço | 
+| status | ENUM | Sim | Valores permitidos: "REQUESTED", "PREPARING", "SENT", "DELIVERY", "CANCELED" |
+| freight | NUMERIC | Sim | - |
+| total_price_products | NUMERIC | Sim | - |
+| estimate_time_delivery | TIMESTAMP | Sim | - |
+| additional_information | TEXT | Não | - |
+| payment_link_pix | TEXT | Não | - |
+| address_link_map | TEXT | Não | - |
+| created_at | TIMESTAMP | Sim | Valor padrão: horário atual; não será possível alterar  |
+| updated_at | TIMESTAMP | Não | Valor padrão: horário atual; será possível alterar  |
