fix #15: corrigindo a descrição de RF004

--- a/requirements/functional/RF004.md
+++ b/requirements/functional/RF004.md
@@ -11,11 +11,14 @@ O sistema deve permitir que os usuários gerenciem suas lojas. Nesse caso, o ger
 - Editar;
 - Desativar;
 - Reativar.
+- Listar;
+- Detalhar;
+- Filtrar.
 
 ## Atores
 
 Usuário
- 
+
 ## Dependências
 
 [RF002](/requirements/functional/RF002.md)
