fix #15: corrigindo a descrição e o id de RF006

--- a/requirements/functional/RF006.md
+++ b/requirements/functional/RF006.md
@@ -1,4 +1,4 @@
-# RF007
+# RF006
 
 ## Caso de Uso
 
@@ -12,6 +12,9 @@ Nesse caso, o gerenciar seria:
 - Editar;
 - Desativar;
 - Reativar.
+- Listar;
+- Detalhar;
+- Filtrar.
 
 ## Atores
 
