fix #15: adicionando uma nova dependência em RN007

--- a/requirements/business-rule/RN007.md
+++ b/requirements/business-rule/RN007.md
@@ -3,3 +3,7 @@
 ## Descrição
 
 Um pedido só pode conter itens de uma única loja.
+
+## Dependência
+
+[RN005](/requirements/business-rule/RN005.md)
