fix #15: adicionando novas dependência em RN010

--- a/requirements/business-rule/RN010.md
+++ b/requirements/business-rule/RN010.md
@@ -6,5 +6,9 @@ Ao finalizar o pedido deve haver um decremento no valor do estoque do produto na
 
 ## Dependência
 
+[RN007](/requirements/business-rule/RN007.md)
+
 [RN008](/requirements/business-rule/RN008.md)
+
+[RN011](/requirements/business-rule/RN011.md)
 
