--- a/requirements/business-rule/RN016.md
+++ b/requirements/business-rule/RN016.md
@@ -4,4 +4,6 @@
 
 Só pode haver remoção de dados permanentemente apenas em itens de carrinho e caso estejam com o status de active (ativo) falso. Todo o resto (objetos de cada tabela) será apenas desativado com opção de futura reativação no sistema.
 
+## Dependência
 
+[RN010](/requirements/business-rule/RN010.md)
