--- a/requirements/business-rule/RN008.md
+++ b/requirements/business-rule/RN008.md
@@ -3,3 +3,7 @@
 ## Descrição
 
 A quantidade no carrinho não pode ser menor que 1 (um) nem maior que o estoque disponível.
+
+## Dependência
+
+[RN005](/requirements/business-rule/RN005.md)
