fix #15: correção da descrição de RN006

--- a/requirements/business-rule/RN006.md
+++ b/requirements/business-rule/RN006.md
@@ -2,7 +2,7 @@
 
 ## Descrição
 
-O preenchimento automático dos dados de endereço via API do ViaCEP é obrigatório, caso esteja funcionando no momento. Além disso, a inclusão opcional dos campos de latitude e longitude deverá ser realizada via API do OpenStreetMap, caso esteja funcionando no momento.
+O sistema deve tentar o preenchimento automático dos campos de endereço via ViaCEP. Em caso de falha da API, o cliente deve preencher manualmente o endereço. A inclusão opcional de latitude e longitude via OpenStreetMap será tentada se a API estiver funcional.
 
 ## Dependência
 
