fix #15: correção da descrição de RN010

--- a/requirements/business-rule/RN010.md
+++ b/requirements/business-rule/RN010.md
@@ -2,7 +2,7 @@
 
 ## Descrição
 
-Ao finalizar o pedido deve haver um decremento no valor do estoque do produto na loja referente a quantidade solicitada.
+Ao finalizar o pedido, deve haver um decremento imediato no valor do estoque do produto na loja referente à quantidade solicitada. O status inicial do pedido será REQUESTED (solicitado).
 
 ## Dependência
 
