fix #15: correção da descrição de RN012

--- a/requirements/business-rule/RN012.md
+++ b/requirements/business-rule/RN012.md
@@ -2,4 +2,4 @@
 
 ## Descrição
 
-O link e o QR Code de pagamento devem ser gerados exclusivamente pela API do PIX, caso a API esteja funcional no momento da finalização da compra.
+O link e o QRCode de pagamento devem ser gerados exclusivamente pela API do PIX. Se a API do PIX falhar ou estiver indisponível, o pedido será finalizado normalmente (com status REQUESTED), mas sem a geração do link e QRCode de pagamento.
