--- a/requirements/business-rule/RN008.md
+++ b/requirements/business-rule/RN008.md
@@ -2,8 +2,4 @@
 
 ## Descrição
 
-A quantidade no carrinho não pode ser menor que 1 (um) nem maior que o estoque disponível.
-
-## Dependência
-
-[RN005](/requirements/business-rule/RN005.md)
+A quantidade de itens no carrinho não pode ser menor que 1 (um) nem maior que o estoque disponível.
