fix #15: corrigindo a descrição do RF010

--- a/requirements/functional/RF010.md
+++ b/requirements/functional/RF010.md
@@ -8,6 +8,7 @@ Gerenciar Itens de Carrinho
 
 O sistema deve permitir que os usuários gerenciem os itens de carrinho no carrinho de compras.
 Nesse caso, o gerenciar seria:
+- Filtrar por loja;
 - Editar;
 - Apagar.
 
