fix #15: corrigindo a descrição de RNF008

--- a/requirements/non-functional/RNF008.md
+++ b/requirements/non-functional/RNF008.md
@@ -2,7 +2,7 @@
 
 ## Descrição
 
-O banco de imagens armazenadas será servido pelo Cloudinary.
+O banco de mídia que armazena imagens e arquivos no sistema será servido pelo Cloudinary.
 
 ## Categoria
 
