fix #15: corrigindo a descrição de RNF014

--- a/requirements/non-functional/RNF014.md
+++ b/requirements/non-functional/RNF014.md
@@ -2,7 +2,7 @@
 
 ## Descrição
 
-O backend, hospedado na Azure, deve ser capaz de operar de forma estável sob aumento moderado de acessos, permitindo a adição manual de novas instâncias quando necessário, sem exigir mecanismos automáticos de escalabilidade ou tolerância avançada a falhas.
+O backend, hospedado na Azure, deve ser capaz de operar de forma estável sob aumento moderado de acessos, permitindo a adição manual de novas instâncias quando necessário, sem exigir, por enquanto, mecanismos automáticos de escalabilidade ou tolerância avançada a falhas.
 
 ## Categoria
 
