fix #15: corrigindo a descrição de RN016

--- a/requirements/business-rule/RN016.md
+++ b/requirements/business-rule/RN016.md
@@ -2,4 +2,4 @@
 
 ## Descrição
 
-Só pode haver remoção de dados permanentemente apenas em itens de carrinho e caso estejam com o status de active (ativo) falso. Todo o resto (objetos de cada tabela) será apenas desativado com opção de futura reativação no sistema.
+Só pode haver remoção de dados permanentemente apenas em itens de carrinho e caso estejam com o status de active (ativo) verdadeiro. Todo o resto (objetos de cada tabela) será apenas desativado com opção de futura reativação no sistema.
