fix #15: corrigindo os tipos de dados em RF003

--- a/requirements/functional/RF003.md
+++ b/requirements/functional/RF003.md
@@ -43,8 +43,8 @@ Um endereço não precisa conter uma loja para ser registrado, nem uma loja prec
 | street | VARCHAR(255) | Sim | Máximo de caracteres: 255 |
 | complement | TEXT | Não | - |
 | number | INTEGER | Sim | - |
-| latitude | TEXT | Não | - |
-| longitude | TEXT | Não | - |
+| latitude | NUMERIC | Não | - |
+| longitude | NUMERIC | Não | - |
 | whatsapp | VARCHAR(11) | Sim | Máximo de caracteres: 11; mínimo de carcacteres: 11; valor único |
 | created_at | TIMESTAMP | Sim | Valor padrão: horário atual; não será possível alterar  |
 | updated_at | TIMESTAMP | Não | Valor padrão: horário atual; será possível alterar  |
