fix #15: corrigindo os tipos de dados de RF004

--- a/requirements/functional/RF004.md
+++ b/requirements/functional/RF004.md
@@ -43,8 +43,7 @@ Uma loja deve pertecer no mínimo um usuário e no máximo um usuário. Contudo,
 | is_open | BOOL | Sim | -  |
 | is_delivered | BOOL | Sim | - |
 | pix_key | TEXT | Sim | - |
-| delivery_time_km | TIMESTAMP | Não | - |
-| fixed_shipping | NUMERIC | Não | - |
+| delivery_time_km | INTEGER | Não | - |
 | dynamic_freight_km | NUMERIC | Não | - |
 | created_at | TIMESTAMP | Sim | Valor padrão: horário atual; não será possível alterar  |
 | updated_at | TIMESTAMP | Não | Valor padrão: horário atual; será possível alterar  |
