fix #15: corrigindo os tipos de dados de RF006

--- a/requirements/functional/RF006.md
+++ b/requirements/functional/RF006.md
@@ -43,6 +43,6 @@ Um produto deve pertecer no mínimo a uma loja e no máximo a uma loja. Contudo,
 | amount | INTEGER | Sim | - |
 | active | BOOL | Sim | - |
 | is_perishable | BOOL | Sim | - |
-| preparation_time | TIMESTAMP | Não | - |
+| preparation_time | INTEGER | Não | - |
 | created_at | TIMESTAMP | Sim | Valor padrão: horário atual; não será possível alterar  |
 | updated_at | TIMESTAMP | Não | Valor padrão: horário atual; será possível alterar  |
